Remove overflow para posicionamento correto do menu - Fixed #7 e #8

--- a/src/sass/_slick.scss
+++ b/src/sass/_slick.scss
@@ -20,7 +20,7 @@
 
 .slick-list {
   position: relative;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   display: block;
   margin: 0;
   padding: 0;
